tests/errors/compiler/no_brackets_in_main.c
void main()
	int arr[2][] = {{1221, 344}, {34543, 55555}};
